# ros2_common_type_adaptations

./: .gitignore  README.md
actionlib_msgs_type_adaptations/: CMakeLists.txt  package.xml
common_interfaces/actionlib_msgs_type_adaptations/: CMakeLists.txt  package.xml
common_interfaces/actionlib_msgs_type_adaptations/include/actionlib_msgs_adaptations/: GoalIDTypeAdapter.hpp  GoalStatusArrayTypeAdapter.hpp  GoalStatusTypeAdapter.hpp
common_interfaces/diagnostic_msgs_type_adaptations/: CMakeLists.txt
common_interfaces/diagnostic_msgs_type_adaptations/include/diagnostic_msgs_type_adaptations/: DiagnosticArrayTypeAdapter.hpp  DiagnosticStatusTypeAdapter.hpp  KeyValueTypeAdaptater.hpp
common_interfaces/geometry_msgs_type_adaptations/: CMakeLists.txt  package.xml
common_interfaces/geometry_msgs_type_adaptations/include/geometry_msgs_type_adaptations/: AccelStampedTypeAdapter.hpp  AccelWithCovarianceStampedTypeAdapter.hpp  AccelWithCovarianceTypeAdapter.hpp  InertiaStampedTypeAdapter.hpp  InertiaTypeAdapter.hpp  Point32TypeAdapter.hpp  PointStampedTypeAdapter.hpp  PointTypeAdapter.hpp  PolygonStampedTypeAdapter.hpp  PolygonTypeAdapter.hpp  Pose2DTypeAdapter.hpp  PoseArrayTypeAdapter.hpp  PoseStampedTypeAdapter.hpp  PoseTypeAdapter.hpp  PoseWithCovarianceStampedTypeAdapter.hpp  PoseWithCovarianceTypeAdapter.hpp  QuaternionStampedTypeAdapter.hpp  QuaternionTypeAdapter.hpp  TransformStampedTypeAdapter.hpp  TransformTypeAdapter.hpp  TwistStampedTypeAdapter.hpp  TwistTypeAdapter.hpp  TwistWithCovarianceStampedTypeAdapter.hpp  TwistWithCovarianceTypeAdapter.hpp  Vector3StampedTypeAdapter.hpp  Vector3TypeAdapter.hpp  WrenchStampedTypeAdapter.hpp  WrenchTypeAdapter.hpp
common_interfaces/nav_msgs_type_adaptations/: CMakeLists.txt  package.xml
common_interfaces/nav_msgs_type_adaptations/include/nav_msgs_type_adaptations/: GridCellsTypeAdapter.hpp  MapMetaDataTypeAdapter.hpp  OccupancyGridTypeAdapter.hpp  OdometryTypeAdapter.hpp  PathTypeAdapter.hpp
common_interfaces/ros2_common_type_adaptations/: package.xml
common_interfaces/sensor_msgs_type_adaptations/: CMakeLists.txt  package.xml
common_interfaces/sensor_msgs_type_adaptations/include/sensor_msgs_type_adaptations/: BatteryStateTypeAdapter.hpp  CompressedImageTypeAdapter.hpp
common_interfaces/shape_msgs_type_adaptations/: CMakeLists.txt  package.xml
common_interfaces/shape_msgs_type_adaptations/include/shape_msgs_type_adaptations/: MeshTriangleTypeAdapter.hpp  MeshTypeAdapter.hpp  PlaneTypeAdapter.hpp  SolidPrimitiveTypeAdapter.hpp
common_interfaces/std_msgs_type_adaptations/: CMakeLists.txt  package.xml
common_interfaces/std_msgs_type_adaptations/include/std_msgs_type_adaptations/: BoolTypeAdapter.hpp  ByteMultiArrayTypeAdapter.hpp  EmptyTypeAdapter.hpp  Float32MultiArrayTypeAdapter.hpp  Float64MultiArrayTypeAdapter.hpp  Float64TypeAdapter.hpp  HeaderTypeAdapter.hpp  Int16MultiArrayTypeAdapter.hpp  Int32MultiArrayTypeAdapter.hpp  Int32TypeAdapter.hpp  Int64MultiArrayTypeAdapter.hpp  Int8MultiArrayTypeAdapter.hpp  Int8TypeAdapter.hpp  MultiArrayDimensionTypeAdapter.hpp  MultiArrayLayoutTypeAdapter.hpp  (+6 more)
common_interfaces/std_srvs_type_adaptations/: CMakeLists.txt  package.xml
common_interfaces/stereo_msgs_type_adaptations/: package.xml
common_interfaces/trajectory_msgs_type_adaptations/: CMakeLists.txt  package.xml
common_interfaces/trajectory_msgs_type_adaptations/include/trajectory_msgs_type_adaptations/: JointTrajectoryPointTypeAdapter.hpp  JointTrajectoryTypeAdapter.hpp  MultiDOFJointTrajectoryPointTypeAdapter.hpp  MultiDOFJointTrajectoryTypeAdapter.hpp
common_interfaces/visualization_msgs_type_adaptations/: CMakeLists.txt  package.xml
common_interfaces/visualization_msgs_type_adaptations/include/visualization_msgs_type_adaptations/: ImageMarkerTypeAdapter.hpp  InteractiveMarkerControlTypeAdapter.hpp  InteractiveMarkerFeedbackTypeAdapter.hpp  InteractiveMarkerInitTypeAdapter.hpp  InteractiveMarkerPoseTypeAdapter.hpp  InteractiveMarkerTypeAdapter.hpp  InteractiveMarkerUpdateTypeAdapter.hpp  MarkerArrayTypeAdapter.hpp  MarkerTypeAdapter.hpp  MenuEntryTypeAdpater.hpp  MeshFileTypeAdapter.hpp  UVCoordinateTypeAdapter.hpp
diagnostic_msgs_type_adaptations/: CMakeLists.txt  package.xml
geometry_msgs_type_adaptations/: CMakeLists.txt
nav_msgs_type_adaptations/: CMakeLists.txt
rcl_interfaces/action_msgs_type_adaptations/: CMakeLists.txt  package.xml
rcl_interfaces/builtin_interfaces_type_adaptations/: CMakeLists.txt  package.xml
rcl_interfaces/composition_interfaces_type_adaptations/: CMakeLists.txt  package.xml
rcl_interfaces/lifecycle_msgs_type_adaptations/: CMakeLists.txt  package.xml
rcl_interfaces/rcl_interfaces_type_adaptations/: CMakeLists.txt  package.xml
rcl_interfaces/rosgraph_msgs_type_adaptations/: CMakeLists.txt  package.xml
rcl_interfaces/service_msgs_type_adaptations/: CMakeLists.txt  package.xml
rcl_interfaces/statistics_msgs_type_adaptations/: CMakeLists.txt  package.xml
rcl_interfaces/type_description_interfaces_type_adaptations/: CMakeLists.txt  package.xml
rcl_interfaces/type_description_interfaces_type_adaptations/include/type_description_interfaces_type_adaptations/: FieldTypeAdapter.hpp  FieldTypeTypeAdapter.hpp  IndividualTypeDescriptionTypeAdapter.hpp  TypeDescriptionTypeAdapter.hpp
ros2_common_type_adaptations/: CMakeLists.txt
sensor_msgs_type_adaptations/: CMakeLists.txt  package.xml
shape_msgs_type_adaptations/: CMakeLists.txt  package.xml
std_msgs_type_adaptations/: CMakeLists.txt  package.xml
std_msgs_type_adaptations/include/std_msgs_type_adaptations/: ByteMultiArrayTypeAdapter.hpp  ByteTypeAdapter.hpp  CharTypeAdapter.hpp  ColorRGBATypeAdapter.hpp  Float32TypeAdapter.hpp  Int16MultiArrayTypeAdapter.hpp  Int16TypeAdapter.hpp  Int64MultiArrayTypeAdapter.hpp  Int64TypeAdapter.hpp  Int8MultiArrayTypeAdapter.hpp  StringTypeAdapter.hpp  UInt16MultiArrayTypeAdapter.hpp  UInt16TypeAdapter.hpp  UInt32MultiArrayTypeAdapter.hpp  UInt8TypeAdapter.hpp
stereo_msgs_type_adaptations/: CMakeLists.txt
trajectory_msgs_type_adaptations/: package.xml
(+23 files in other folders)
