<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_common_type_adaptations</name>
  <version>0.0.0</version>
  <description>ros2_common_type_adaptations holds all the type adaptations for common messages and services </description>
  <maintainer email="mtglucas1@gmail.com">cursedrock17</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>actionlib_msgs_type_adaptations</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>diagnostic_msgs_type_adaptations</exec_depend>
  <exec_depend>geometry_msgs_type_adaptations</exec_depend>
  <exec_depend>nav_msgs_type_adaptations</exec_depend>
  <exec_depend>sensor_msgs_type_adaptations</exec_depend>
  <exec_depend>shape_msgs_type_adaptations</exec_depend>
  <exec_depend>std_msgs_type_adaptations</exec_depend>
  <exec_depend>std_srvs_type_adaptations</exec_depend>
  <exec_depend>stereo_msgs_type_adaptations</exec_depend>
  <exec_depend>trajectory_msgs_type_adaptations</exec_depend>
  <exec_depend>visualization_msgs_type_adaptations</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
