<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>visualization_msgs_type_adaptations</name>
  <version>0.0.0</version>
  <description>Type Adapters for messages and services within visualization_msgs</description>
  <maintainer email="mtglucas1@gmail.com">cursedrock17</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_msgs_type_adaptations</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_type_adaptations</depend>
  <depend>geometry_msgs</depend>
  <depend>geometry_msgs_type_adaptations</depend>
  <depend>builtin_interfaces</depend>
  <depend>builtin_interfaces_type_adaptations</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
